# mcp

./: LICENSE  README.md  pypi-api-token.txt  pypi-recovery-code.txt  submit.sh
src/linzt_mcp_test_20251202/: README.md  pyproject.toml
src/linzt_mcp_test_20251202/src/linzt_mcp_test_20251202/: __main__.py
src/linzt_mcp_test_20251202/tests/: test.py
src/scrna/: main.py  pyproject.toml
src/scrna/src/: __init__.py
src/scrna/src/scrna/: __main__.py  server.py
