[project]
name = "linzt-mcp-test-20251202"
version = "0.0.1"
description = "A Model Context Protocol server providing tools to read, search, and manipulate Git repositories programmatically via LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "linzt" }]
maintainers = [{ name = "linzt", email = "linzeteng123@163.com" }]
keywords = ["mcp", "llm"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click>=8.1.7",
    "gitpython>=3.1.45",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
linzt-mcp-test-20251202 = "linzt_mcp_test_20251202:main"

[build-system]
requires = ["uv_build >= 0.9.11, <0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pyright>=1.1.407", "ruff>=0.7.3", "pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
